# Friendship-Service

./: .gitignore
.claude/: launch.json  settings.local.json
backend/: Cargo.toml
backend/migrations/: 001_create_users.sql  003_create_service_requests.sql  005_create_reviews.sql  006_create_messages.sql  V001__create_users.sql  V002__create_services.sql  V003__create_service_requests.sql  V004__create_surveys.sql  V005__create_reviews_and_work_status.sql  V006__create_messages.sql  V007__add_google_oauth.sql  V008__add_decline_reason.sql
backend/src/: auth.rs  db.rs  main.rs
backend/src/handlers/: auth.rs  messages.rs  mod.rs  reviews.rs  services.rs  surveys.rs
backend/src/models/: mod.rs  review.rs  service.rs  service_request.rs  user.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/i18n/locales/: en.json  es.json  pt.json
frontend/src/: api.js  config.js  main.js  router.js  utils.js
frontend/src/components/: star-rating.js
frontend/src/i18n/: i18n.js
frontend/src/i18n/locales/: en.json  es.json  pt.json
frontend/src/pages/provider/: create-service.js  provider-survey.js
frontend/src/pages/seeker/: browse.js  seeker-survey.js  service-detail.js  suggestions.js
frontend/src/pages/shared/: chat.js  dashboard.js  forgot-password.js  home.js  login.js  not-found.js  (+1 more)
frontend/src/styles/: main.css  reset.css  variables.css
plans/: email-password-login.md  google-oauth.md  i18n-language-selection.md  request-chat.md  satisfaction-surveys-and-ratings.md
scripts/: build.sh  dev.sh  vite-dev.sh
