[package]
name = "friendship-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Auth
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"

# HTTP client (Google token verification)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Embed frontend assets
rust-embed = "8"
mime_guess = "2"

# Migrations
refinery = { version = "0.8", features = ["rusqlite"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
